# my_hospital

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: test.py
app/clinic/: apps.py  enums.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py  viewsets.py
app/clinic/management/commands/: create_dummy.py
app/clinic/migrations/: 0001_initial.py  0002_rename_lunch_time_businesshours_lunch_end_time_and_more.py  0003_rename_businesshours_businesshour.py
app/clinic/tests/: conftest.py  test_doctor.py  test_request_treatment.py  test_search_doctor.py  test_treatment.py  tests.py
app/config/: settings.py  urls.py
